--- a/public/main.css
+++ b/public/main.css
@@ -46,12 +46,17 @@
   justify-content: center;
 }
 .cake img {
-  max-width: 500px;
-  max-height: 500px;
+  max-width: 600px;
+  max-height: 600px;
   height: auto;
   width: auto;
   margin: 10px;
 }
+
+h4 {
+  padding-left: 15px;
+}
+
 h5 {
   padding-left: 15px;
 }
